2011-06-13 Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Added time to live to
	area graphs in pdf calls

	* operation/reporting/reporting_xml.php: Fixed bad characteres in
	xml 

2011-06-13 Javier Lanz <javier.lanz@artica.es>

	* images/mult.png, images/subs.png, images/div.png: Added png images

2011-06-13  Ramon Novoa  <rnovoa@artica.es>

	* operation/events/events_list.php: Always show pending events.

2011-06-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/functions_reporting.php
	include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php
	include/config_process.php
	include/include_graph_dependencies.php
	operation/agentes/stat_win.php
	operation/reporting/reporting_xml.php: Fixed missed parameters
	in sparse graph functions.
	Fixed graph includes and bugs

2011-06-10  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_api.php, pandoradb.sql,
	  pandoradb.postgreSQL.sql, pandoradb.oracle.sql,
	  extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added support for
	  configuration change events (enterprise).
	
	* operation/events/events_list.php: Improved event grouping.

2011-06-10 Javier Lanz <javier.lanz@artica.es>

	* include/graphs/functions_fsgraph.php: Updated a deprecated function
	call
	* include/functions_reporting.php: ixed a mistake using the wrong
	variable to print pie graph
	* godmode/agentes/module_manager_editor_prediction.php: Removed a
	html_debug_print call

2011-06-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_v3.2_to_v4.0.sql: New field "tags" in 
	"tevento" table for Oracle, Postgresql and migration script.
